# screener

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  chain.pem  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish-aggregated-canonical-equities.yml  publish-build-release.yml
config/: __init__.py  config_models.py  main_config.py  mock_config.py
data/: equities.db  lse_equities.json  stocks_universe.db  xetra_equities.json
db/: database.py  schema.py
page_utils/: __init__.py  page_registry.py  page_utils.py
src/: __init__.py  fmp_client.py  main_config.py
src/analyses/asset_analysis/: asset_analysis.py  utils.py
src/dashboards/overview/: fetch.py  overview.py  overview_config.py  utils.py
src/equity_aggregator/: __init__.py  __main__.py  cli.py  data_store.py  logging_config.py
src/equity_aggregator/domain/: __init__.py
src/equity_aggregator/domain/pipeline/: __init__.py  resolve.py  runner.py
src/equity_aggregator/storage/: __init__.py  data_json_store.py  data_sql_store.py  data_store.py
src/pages/: __init__.py
src/pages/analyses/: __init__.py
src/pages/analyses/asset_analysis/: __init__.py  (+2 more)
src/pages/dashboards/: __init__.py
src/pages/trackers/: __init__.py
src/portfolio/: portfolio.py
src/services/: __init__.py  service_provider.py
src/services/database/: __init__.py  database_service.py
src/services/fmp/: __init__.py  fmp_service.py
src/universe/: universe.py
tests/: __init__.py  conftest.py  mock_config.py
tests/mocks/: __init__.py  utils.py
tests/mocks/mock_dashboards/: __init__.py
tests/unit/: test_data_sql_store.py  test_data_store.py
tests/unit/storage/: test_data_store.py
(+49 files in other folders)
