[project]
name = "screener"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.41.1",
    "fmp-lib",
    "pandas>=2.2.3",
    "streamlit-aggrid>=1.0.5",
    "pytest>=8.3.4",
    "pydantic>=2.10.5",
    "sqlalchemy>=2.0.37",
    "ruff>=0.9.3",
]

[tool.uv.workspace]
members = [ "packages/*" ]

[tool.hatch.build.targets.wheel]
packages = ["src/*"]

[tool.uv.sources]
fmp-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --verbose"
testpaths = [
    "tests",
    "src"
]
