[project]
name = "screener"
version = "0.1.0"
requires-python = ">=3.12.5"
dependencies = [
  "streamlit-app",
  "data-aggregator",
  "database"
]

[tool.uv.sources]
streamlit-app   = { workspace = true }
data-aggregator = { workspace = true }
database        = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
markers = [
  "live: queries the live data vendor endpoints; run with -m live",
]
timeout = 20
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = false